[build-system]
requires = [
  "setuptools>=42"
]
build-backend = "setuptools.build_meta"


[project]
name = "infrastructure_tools"
version = "0.1.0"
authors = [
    {name = "Alexander Tsaregorodtsev", email = "tuxerr.at@gmail.com"},
]
dependencies = [
  "numba",
  "excalibur"
]
description = "Infrastructure calibration tools"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
]

[tool.setuptools.packages.find]
include = ["infrastructure_tools*"]
